Update jetty-start testing (#14896)
* Cleaning up jetty-start test cases.
* Using modern Java
* Eliminating use of deprecated classes and methods.
* Using Path were we can.
* Standardize UTF_8 references
* Fix test assertion when running on Windows.