@@ -13,11 +13,7 @@
 
 package org.eclipse.jetty.start.usecases;
 
-import java.io.File;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -25,6 +21,7 @@ import java.util.Set;
 import org.eclipse.jetty.toolchain.test.FS;
 import org.junit.jupiter.api.Test;
 
+import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.contains;
 import static org.hamcrest.Matchers.containsInAnyOrder;
@@ -42,40 +39,38 @@ public class AgentPropertiesTest extends AbstractUseCase
         FS.touch(baseDir.resolve("lib/agent-jdk-1.6.jar"));
         FS.touch(baseDir.resolve("lib/agent-jdk-1.7.jar"));
         FS.touch(baseDir.resolve("lib/agent-jdk-1.8.jar"));
-        Files.write(baseDir.resolve("modules/agent.mod"),
-            Arrays.asList(
-                "[depend]",
-                "main",
-                "[lib]",
-                "lib/agent-jdk-${java.vm.specification.version}.jar"
-            ),
-            StandardCharsets.UTF_8);
-        Files.write(baseDir.resolve("start.ini"),
-            Collections.singletonList(
-                "--modules=main,agent"
-            ),
-            StandardCharsets.UTF_8);
+        Files.writeString(baseDir.resolve("modules/agent.mod"),
+        """
+            [depend]
+            main
+            [lib]
+            lib/agent-jdk-${java.vm.specification.version}.jar
+            """, UTF_8);
+        Files.writeString(baseDir.resolve("start.ini"),
+            """
+            --modules=main,agent
+            """, UTF_8);
 
         // === Execute Main
-        List<String> runArgs = Collections.singletonList(
+        List<String> runArgs = List.of(
             "java.vm.specification.version=1.7"
         );
         ExecResults results = exec(runArgs, false);
 
         // === Validate Resulting XMLs
-        List<String> expectedXmls = Arrays.asList(
-            "${jetty.home}/etc/base.xml".replace('/', File.separatorChar),
-            "${jetty.home}/etc/main.xml".replace('/', File.separatorChar)
+        List<String> expectedXmls = List.of(
+            FS.separators("${jetty.home}/etc/base.xml"),
+            FS.separators("${jetty.home}/etc/main.xml")
         );
         List<String> actualXmls = results.getXmls();
         assertThat("XML Resolution Order", actualXmls, contains(expectedXmls.toArray()));
 
         // === Validate Resulting LIBs
-        List<String> expectedLibs = Arrays.asList(
-            "${jetty.home}/lib/base.jar".replace('/', File.separatorChar),
-            "${jetty.home}/lib/main.jar".replace('/', File.separatorChar),
-            "${jetty.home}/lib/other.jar".replace('/', File.separatorChar),
-            "${jetty.base}/lib/agent-jdk-1.7.jar".replace('/', File.separatorChar)
+        List<String> expectedLibs = List.of(
+            FS.separators("${jetty.home}/lib/base.jar"),
+            FS.separators("${jetty.home}/lib/main.jar"),
+            FS.separators("${jetty.home}/lib/other.jar"),
+            FS.separators("${jetty.base}/lib/agent-jdk-1.7.jar")
         );
         List<String> actualLibs = results.getLibs();
         assertThat("Libs", actualLibs, containsInAnyOrder(expectedLibs.toArray()));
