@@ -13,17 +13,16 @@
 
 package org.eclipse.jetty.start.usecases;
 
-import java.io.File;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
 import org.eclipse.jetty.toolchain.test.FS;
-import org.eclipse.jetty.toolchain.test.PathAssert;
 import org.junit.jupiter.api.Test;
 
+import static org.eclipse.jetty.toolchain.test.PathMatchers.isDirectory;
+import static org.eclipse.jetty.toolchain.test.PathMatchers.isRegularFile;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.contains;
 import static org.hamcrest.Matchers.containsInAnyOrder;
@@ -38,7 +37,7 @@ public class EmptyAddToStartCreateStartdTest extends AbstractUseCase
         FS.touch(baseDir.resolve("unrelated.txt"));
 
         // === Prepare Jetty Base using Main
-        List<String> prepareArgs = Arrays.asList(
+        List<String> prepareArgs = List.of(
             "--testing-mode",
             "--add-modules=extra",
             "--create-startd",
@@ -51,23 +50,23 @@ public class EmptyAddToStartCreateStartdTest extends AbstractUseCase
         ExecResults results = exec(runArgs, false);
 
         // === Validate Resulting XMLs
-        List<String> expectedXmls = Arrays.asList(
-            "${jetty.home}/etc/optional.xml".replace('/', File.separatorChar),
-            "${jetty.home}/etc/base.xml".replace('/', File.separatorChar),
-            "${jetty.home}/etc/main.xml".replace('/', File.separatorChar),
-            "${jetty.home}/etc/extra.xml".replace('/', File.separatorChar)
+        List<String> expectedXmls = List.of(
+            FS.separators("${jetty.home}/etc/optional.xml"),
+            FS.separators("${jetty.home}/etc/base.xml"),
+            FS.separators("${jetty.home}/etc/main.xml"),
+            FS.separators("${jetty.home}/etc/extra.xml")
         );
         List<String> actualXmls = results.getXmls();
         assertThat("XML Resolution Order", actualXmls, contains(expectedXmls.toArray()));
 
         // === Validate Resulting LIBs
-        List<String> expectedLibs = Arrays.asList(
-            "${jetty.home}/lib/optional.jar".replace('/', File.separatorChar),
-            "${jetty.home}/lib/base.jar".replace('/', File.separatorChar),
-            "${jetty.home}/lib/main.jar".replace('/', File.separatorChar),
-            "${jetty.home}/lib/other.jar".replace('/', File.separatorChar),
-            "${jetty.home}/lib/extra/extra0.jar".replace('/', File.separatorChar),
-            "${jetty.home}/lib/extra/extra1.jar".replace('/', File.separatorChar)
+        List<String> expectedLibs = List.of(
+            FS.separators("${jetty.home}/lib/optional.jar"),
+            FS.separators("${jetty.home}/lib/base.jar"),
+            FS.separators("${jetty.home}/lib/main.jar"),
+            FS.separators("${jetty.home}/lib/other.jar"),
+            FS.separators("${jetty.home}/lib/extra/extra0.jar"),
+            FS.separators("${jetty.home}/lib/extra/extra1.jar")
         );
         List<String> actualLibs = results.getLibs();
         assertThat("Libs", actualLibs, containsInAnyOrder(expectedLibs.toArray()));
@@ -81,9 +80,9 @@ public class EmptyAddToStartCreateStartdTest extends AbstractUseCase
         assertThat("Properties", actualProperties, containsInAnyOrder(expectedProperties.toArray()));
 
         // === Validate Specific Jetty Base Files/Dirs Exist
-        PathAssert.assertDirExists("Required Directory: maindir/", results.baseHome.getPath("maindir/"));
-        PathAssert.assertFileExists("Required File: start.d/extra.ini", results.baseHome.getPath("start.d/extra.ini"));
-        PathAssert.assertFileExists("Required File: start.d/optional.ini", results.baseHome.getPath("start.d/optional.ini"));
+        assertThat("Required Directory: maindir/", results.baseHome.getPath("maindir/"), isDirectory());
+        assertThat("Required File: start.d/extra.ini", results.baseHome.getPath("start.d/extra.ini"), isRegularFile());
+        assertThat("Required File: start.d/optional.ini", results.baseHome.getPath("start.d/optional.ini"), isRegularFile());
 
         // === Validate Specific Lines Exist in Output
         assertOutputContainsRegex(prepareResults.output, "mkdir \\$\\{jetty.base\\}[\\\\/]maindir");
